[gd_scene load_steps=9 format=3 uid="uid://bhbr6l1et4nqh"]

[ext_resource type="Script" uid="uid://dygxb2gsojykb" path="res://prefabs/thunderbolt.gd" id="1_ch331"]
[ext_resource type="Shader" uid="uid://lkqalfa885a7" path="res://prefabs/lighting.gdshader" id="2_uba4g"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ad3cw"]
albedo_color = Color(0.847059, 0.435294, 0.207843, 0.458824)
emission_enabled = true
emission = Color(1, 0.682353, 0.211765, 1)
emission_energy_multiplier = 1.74

[sub_resource type="SphereMesh" id="SphereMesh_ch331"]
material = SubResource("StandardMaterial3D_ad3cw")
radius = 0.1
height = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_ch331"]
radius = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ch331"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uba4g"]
render_priority = 0
shader = ExtResource("2_uba4g")
shader_parameter/effect_color = Color(0.2, 0.3, 0.8, 1)
shader_parameter/octave_count = 10
shader_parameter/amp_start = 0.5
shader_parameter/amp_coeff = 0.5
shader_parameter/freq_coeff = 2.0
shader_parameter/speed = 0.5

[sub_resource type="PlaneMesh" id="PlaneMesh_x28xq"]
material = SubResource("ShaderMaterial_uba4g")

[node name="thunderbolt" type="CharacterBody3D"]
collision_layer = 256
collision_mask = 705
script = ExtResource("1_ch331")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
layers = 513
mesh = SubResource("SphereMesh_ch331")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
visible = false
shape = SubResource("SphereShape3D_ch331")

[node name="timer_remove_object" type="Timer" parent="."]
one_shot = true

[node name="area3d_thunderbolt_circle" type="Area3D" parent="."]
collision_layer = 256
collision_mask = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="area3d_thunderbolt_circle"]
shape = SubResource("CylinderShape3D_ch331")

[node name="timer_find_enemy_in_area" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="lighting" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("PlaneMesh_x28xq")

[connection signal="timeout" from="timer_remove_object" to="." method="_on_timer_remove_object_timeout"]
[connection signal="timeout" from="timer_find_enemy_in_area" to="." method="_on_timer_find_enemy_in_area_timeout"]
